<resources>
    <string name="app_name">Travel in Taytay</string>
    <string name="let_s_get_started">LET\'S GET STARTED!</string>
    <string name="app_logo">Travel in Taytay</string>
    <string name="search_text">Search...</string>
    <string name="taytay_tiangge">TAYTAY TIANGGE</string>
    <string name="Info_in_taytay">This app allows you to view and search all destinations, attractions, restaurants, and tour guides</string>
    <string name="see_the_beauty_of_taytay_rizal">See the beauty of Taytay Rizal</string>

    //Brgy
    <string name="brgyStana">Address: H48G+5MV, Taytay, 1920 Metro Manila, Philippines(via google maps)\nDescription: Sta. Ana is a barangay in the municipality of Taytay, province of Rizal.</string>
    <string name="brgySanjuan">Address: 1920 Tanchoco Ave, Taytay, 1920 Metro Manila, Philippines(via google maps)\nDescription: San Juan is a barangay in the municipality of Taytay, province of Rizal.</string>
    <string name="brgySanisidro">Address: Santos compd.2, Rizal, Philippines(via google maps)\nDescription: San Isidro is a barangay in the municipality of Taytay, province of Rizal.</string>
    <string name="brgyMuzon">Address: G4VV+GR4, Manila E Rd, Muzon, Taytay, 1920 Rizal, Philippines(via google maps)\nDescription: Muzon is a barangay in the municipality of Taytay, province of Rizal.</string>
    <string name="brgyDolores">Address: Barangay Dolores Hall, 78 Mahinhin, Taytay, 1920 Rizal, Philippines(via google maps)\nDescription: Dolores is a barangay in the municipality of Taytay, province of Rizal.</string>
    //Church
    <string name="sanLorenzo">Address: G4V5+6F3, Ejercito Ave, Taytay, 1920 Rizal(via google maps)\nDescription: San Lorenzo Ruiz Parish Church is a Roman Catholic parish church located in Taytay, Rizal, Philippines.</string>
    <string name="sanFilipe">Address: H43C+527, Blk 3 - Suha St, Taytay, 1920 Rizal(via google maps)\nDescription: The Church of San Felipe Neri, commonly known as "La Profesa" (English: the Professed house), is a Roman Catholic parish church located in Taytay, Rizal, Philippines.</string>
    <string name="stjonh">Address: H4CJ+9WH, J. Sumulong, Taytay, 1920 Rizal(via google maps)\nDescription: St. John the Baptist Parish Church, also known as Parokya ni San Juan Bautista, is a Roman Catholic church located in Taytay, Rizal, Philippines.</string>
    <string name="kingParish">Address: Hills, Dela Cuesta, Muzon, Taytay, 1920 Rizal(via google maps)\nDescription: Christ the King Parish Church is a Catholic church on a hill in Taytay, Rizal, Philippines.</string>
    //Hospital
    <string name="taytaydocs">Address: 6 Rizal Ave, Taytay, 1920 Rizal(via google maps)\nDescription: Taytay Doctors Multispecialty Hospital was created by a group of doctors whose objective was to deliver quality and cost effective health care services.</string>
    <string name="taytayemer">Address: H4CJ+9H9, Taytay, 1920 Rizal(via google maps)\nDescription: Taytay Emergency Hospital is a hospital in Municipality of Taytay, Rizal, Calabarzon located on J. Asilo.</string>
    <string name="taytaymanilaeast">Address: Kay Tikling, Manila East Medical Center, Manila E Rd, Taytay, 1920 Rizal(via google maps)\nDescription: The first Tertiary Hospital in the province of Rizal, strategically located to serve and be in front of health care services to the people of Taytay and nearby municipalities and cities.</string>
    <string name="taytayrphs">Address: 5 J. Sumulong, Taytay, 1920 Rizal(via google maps)\nDescription: The Rizal Medical Center (formerly The Rizal Provincial Hospital) is a DOH-retained Level III hospital</string>
    //School
    <string name="collageofarts">>Address: JEM Bldg., Rizal Ave, Taytay, 1920 Rizal(via google maps)\nDescription: (CASAP) is a private educational institution in the Philippines. It has 5 separate campuses nationwide.</string>
    <string name="icct">Address: 128 Cabrera Rd, Taytay, 1920 Rizal(via google maps)\nDescription: ICCT Colleges, is a tertiary education provider with campuses located in Taytay, Rizal, Philippines.</string>
    <string name="ncb">Address: San Juan Ilog Pugad Rizal Ave, Taytay, 1920 Rizal(via google maps)\nDescription: The National College of Business and Arts or NCBA is a private educational institution in the Philippines.</string>
    <string name="siena">Address: 83 E Rodriguez Ave, Taytay, 1920 Rizal(via google maps)\nDescription: Siena College of Taytay, is a private, non-profit Catholic basic and higher education institution run by the Congregation of the Dominican Sisters of St. Catherine of Siena in Taytay, Rizal, Philippines</string>
    <string name="urs">Address: G4XF+3RW, Taytay, 1920 Rizal(via google maps)\nDescription: University of Rizal System – Taytay (URS - Taytay) is a public academic institution based in Taytay, Rizal.</string>
    //Restaurant
    <string name="bahaykawayan">Address: G4XF+3RW, Taytay, 1920 Rizal(via google maps)\nDescription: University of Rizal System – Taytay (URS - Taytay) is a public academic institution based in Taytay, Rizal.</string>
    <string name="catalangrill">Address: Ground Floor, AMJC BLDG, Sitio Ilog Pugad, National Road, Taytay, 1920 Rizal(via google maps)\nDescription: Catalan Grill and Restaurant is a family-operated establishment that caters to people from different parts of the country and all levels of society in general.</string>
    <string name="matteos">Address: G4XF+3RW, Taytay, 1920 Rizal(via google maps)\nDescription: University of Rizal System – Taytay (URS - Taytay) is a public academic institution based in Taytay, Rizal.</string>
    <string name="kinakap">Address:  Taytay, 1920 Rizal(via google maps)\nDescription: Kinakap Bar and Restaurant, located in Manila East Area, offers a cozy nipa hut-style dining and drinking area for small groups.</string>
    <string name="tyvo">Address: Pulumbarit, corner Rizal Ave, Taytay, 1920 Rizal(via google maps)\nDescription: Tyvo Grill and Cafe also offers a wide variety of menus from sizzling plates, pizza, and pasta to refreshing drinks and coffee.</string>
    //Resort
    <string name="resortDesc">Address: Don Hilario Cruz, Taytay, 1920 Rizal(via google maps)\nDescription: Club Manila east is a resort-hotel water park located in the municipality of Taytay, Rizal.</string>
    //Shop
    <string name="shopDesc">Address: Taytay Diversion Rd, Taytay, 1920 Metro Manila(via google maps)\nDescription: SM City Taytay is a shopping mall owned and operated by SM Prime Holdings.</string>
    <string name="shop_taytaytiangge_desc">Address: Taytay, 1920 Rizal(via google maps)\nDescription: Taytay Municipal Tiangge, a series of small stalls that usually sell cheaper items, considered as a haven by people who love affordable clothes and dresses, entitling the town itself as the Garments Capital of the Philippines.</string>
    //Shop


</resources>