<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Categories.ChurchCategories"
    android:background="@drawable/lightblueback">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
            <ImageView
                android:id="@+id/back_pressed1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/general_back_icon" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C H U R C H"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:padding="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/color55"
            android:layout_margin="20dp">
            <ImageView
                android:id="@+id/shop_image1"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/church_kingparish"
                android:layout_marginTop="5dp" />
            <TextView
                android:id="@+id/shop_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:lineHeight="23dp"
                android:text="Christ the King Parish Church in the sky"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_below="@+id/shop_image1"/>
            <RatingBar
                android:id="@+id/shop_rating1"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="4.5"
                android:layout_below="@+id/shop_title1"/>

            <TextView
                android:id="@+id/school_desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shop_rating1"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/kingParish"
                android:textSize="12dp"
                tools:ignore="TextSizeCheck" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/color55"
            android:layout_margin="20dp">
            <ImageView
                android:id="@+id/school_image2"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/church_sanfelipe"
                android:layout_marginTop="5dp" />
            <TextView
                android:id="@+id/schools_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:lineHeight="23dp"
                android:text="San Felipe Neri Parish"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_below="@+id/school_image2"/>
            <RatingBar
                android:id="@+id/school_rating2"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="4.5"
                android:layout_below="@+id/schools_title2"/>

            <TextView
                android:id="@+id/school_desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/school_rating2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sanFilipe"
                android:textSize="12dp"
                tools:ignore="TextSizeCheck" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/color55"
            android:layout_margin="20dp">
            <ImageView
                android:id="@+id/school_image3"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/church_sanlo"
                android:layout_marginTop="5dp" />
            <TextView
                android:id="@+id/schools_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:lineHeight="23dp"
                android:text="San Lorenzo Ruiz Parish"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_below="@+id/school_image3"/>
            <RatingBar
                android:id="@+id/school_rating3"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="4.5"
                android:layout_below="@+id/schools_title3"/>

            <TextView
                android:id="@+id/school_desc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/school_rating3"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sanLorenzo"
                android:textSize="12dp"
                tools:ignore="TextSizeCheck" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/color55"
            android:layout_margin="20dp">
            <ImageView
                android:id="@+id/school_image4"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/church_stjohn"
                android:layout_marginTop="5dp" />
            <TextView
                android:id="@+id/schools_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:lineHeight="23dp"
                android:text="St. John the Baptist Parish Church "
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_below="@+id/school_image4"/>
            <RatingBar
                android:id="@+id/school_rating4"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="4.5"
                android:layout_below="@+id/schools_title4"/>

            <TextView
                android:id="@+id/school_desc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/school_rating4"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/stjonh"
                android:textSize="12dp"
                tools:ignore="TextSizeCheck" />


        </RelativeLayout>


    </LinearLayout>


</ScrollView>